force-app/main/default/objects/Account/fields/ChurnRisk__c.field-meta.xml
<CustomField>
    <fullName>ChurnRisk__c</fullName>
    <description>Qualitative churn risk classification.</description>
    <label>Churn Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>