force-app/main/default/objects/Account/fields/Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since__c</fullName>
    <description>Date the customer first became active.</description>
    <label>Customer Since</label>
    <type>Date</type>
</CustomField>