force-app/main/default/objects/Account/fields/HealthScore__c.field-meta.xml
<CustomField>
    <fullName>HealthScore__c</fullName>
    <description>Numeric customer health score from 0 to 100.</description>
    <label>Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>